Fix body overflow

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-	overflow-x: hidden;
+	overflow: hidden;
 	margin: 0px;
 	width: 100%;
 	height: 100%;
